--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/7b691a6b0e.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700,800&display=swap" rel="stylesheet">
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
